--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uploadthing/react": "^6.8.0",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "source-map-explorer": "^2.5.3",
+    "uploadthing": "^6.13.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
