--- a/package.json
+++ b/package.json
@@ -46,5 +46,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "@uploadthing/react": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    },
+    "@uploadthing/dropzone": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
